[gd_scene load_steps=3 format=2]

[ext_resource path="res://menuScenes/Deposit and Withdraw.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BankContainer" type="TabContainer" parent="."]
margin_left = 16.0
margin_right = 1040.0
margin_bottom = 600.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deposit and Withdraw" type="Tabs" parent="BankContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 43.0
size_flags_horizontal = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deposit" type="Button" parent="BankContainer/Deposit and Withdraw"]
margin_left = 72.0
margin_top = 53.0
margin_right = 936.0
margin_bottom = 109.0
text = "DEPOSIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Withdraw" type="Button" parent="BankContainer/Deposit and Withdraw"]
margin_left = 72.0
margin_top = 149.0
margin_right = 936.0
margin_bottom = 205.0
text = "WITHDRAW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DepositPage" type="Control" parent="BankContainer/Deposit and Withdraw"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DepLabel" type="Label" parent="BankContainer/Deposit and Withdraw/DepositPage"]
margin_left = 248.0
margin_top = 85.0
margin_right = 742.0
margin_bottom = 118.0
text = "Enter amount of money to deposit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DepSpinBox" type="SpinBox" parent="BankContainer/Deposit and Withdraw/DepositPage"]
margin_left = 424.0
margin_top = 149.0
margin_right = 570.0
margin_bottom = 192.0
max_value = 1e+06
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DepBut" type="Button" parent="BankContainer/Deposit and Withdraw/DepositPage"]
margin_left = 424.0
margin_top = 229.0
margin_right = 568.0
margin_bottom = 272.0
text = "DEPOSIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBut" type="Button" parent="BankContainer/Deposit and Withdraw/DepositPage"]
margin_left = 424.0
margin_top = 301.0
margin_right = 568.0
margin_bottom = 344.0
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuccessLabel" type="Label" parent="BankContainer/Deposit and Withdraw/DepositPage"]
margin_left = 120.0
margin_top = 389.0
margin_right = 872.0
margin_bottom = 422.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WithdrawPage" type="Control" parent="BankContainer/Deposit and Withdraw"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WithLabel" type="Label" parent="BankContainer/Deposit and Withdraw/WithdrawPage"]
margin_left = 232.0
margin_top = 85.0
margin_right = 760.0
margin_bottom = 118.0
text = "Enter amount of money to withdraw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WithSpinBox" type="SpinBox" parent="BankContainer/Deposit and Withdraw/WithdrawPage"]
margin_left = 424.0
margin_top = 149.0
margin_right = 570.0
margin_bottom = 192.0
max_value = 1e+06
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WithBut" type="Button" parent="BankContainer/Deposit and Withdraw/WithdrawPage"]
margin_left = 400.0
margin_top = 229.0
margin_right = 591.0
margin_bottom = 272.0
text = "WITHDRAW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WithBackBut" type="Button" parent="BankContainer/Deposit and Withdraw/WithdrawPage"]
margin_left = 424.0
margin_top = 301.0
margin_right = 568.0
margin_bottom = 344.0
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WithSuccessLabel" type="Label" parent="BankContainer/Deposit and Withdraw/WithdrawPage"]
margin_left = 120.0
margin_top = 389.0
margin_right = 872.0
margin_bottom = 422.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loan" type="Tabs" parent="BankContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 43.0

[node name="Pay" type="Tabs" parent="BankContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 43.0
[connection signal="pressed" from="BankContainer/Deposit and Withdraw/Deposit" to="BankContainer/Deposit and Withdraw" method="_on_Deposit_pressed"]
[connection signal="pressed" from="BankContainer/Deposit and Withdraw/Withdraw" to="BankContainer/Deposit and Withdraw" method="_on_Withdraw_pressed"]
[connection signal="pressed" from="BankContainer/Deposit and Withdraw/DepositPage/DepBut" to="BankContainer/Deposit and Withdraw" method="_on_DepBut_pressed"]
[connection signal="pressed" from="BankContainer/Deposit and Withdraw/DepositPage/BackBut" to="BankContainer/Deposit and Withdraw" method="_on_BackBut_pressed"]
[connection signal="pressed" from="BankContainer/Deposit and Withdraw/WithdrawPage/WithBut" to="BankContainer/Deposit and Withdraw" method="_on_WithBut_pressed"]
[connection signal="pressed" from="BankContainer/Deposit and Withdraw/WithdrawPage/WithBackBut" to="BankContainer/Deposit and Withdraw" method="_on_WithBackBut_pressed"]
